--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active container-fluid">
-        <a href="mens-tShirts.html"><img class="mens-img" src="images/men1-img.jpg" alt="men-profile"></a>
+        <a href="mens-tShirts.html"><img class="mens-img" src="images/men's t-shirt/men1-img.jpg" alt="men-profile"></a>
         </div>
 
         <div class="carousel-item container-fluid">
